<resources>
    <string name="app_name">secondgallery</string>
    <string name="welcome"><b>Welcome!</b></string>
    <string name="create_an_account">Create an account</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_login_or_password">Forgot login or password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name<font color='#FF0000'>*</font></string>
    <string name="birthday">Birthday</string>
    <string name="email2">Email<font color='#FF0000'>*</font></string>
    <string name="password2">Password<font color='#FF0000'>*</font></string>
    <string name="confirm_password2">Confirm Password<font color='#FF0000'>*</font></string>
    <string name="save">Save</string>
    <string name="personal_data">Personal data</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="you_can_delete_your_account">You can <font color='#CF497E'>delete your account</font></string>
    <string name="sign_out">Sign Out</string>
    <string name="popular">Popular</string>
    <string name="_999">+999</string>
    <string name="upload_photo">Upload photo</string>
    <string name="views_999"><b>Views: </b> 999+</string>
    <string name="loaded"><b>Loaded: </b></string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="make_photo">Make Photo</string>
    <string name="select_in_gallery">Select in gallery</string>
    <string name="select">Select:</string>
    <string name="password_changed">Данные пароля успешно изменены</string>
    <string name="data_changed">Данные успешно изменены</string>
    <string name="wrong_old_password">Неправильный старый пароль</string>
    <string name="error">Error</string>
    <string name="error_sign_in">Возникла ошибка, перепроверьте данные и попробуйте позднее</string>
    <string name="image_uploaded">Изображение было загружено</string>
</resources>