<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottom_sheet"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:layout_marginBottom="60dp"
    app:layout_behavior="android.support.design.widget.BottomSheet">

    <TextView
        android:id="@+id/tv_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:text="@string/select"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_make_photo"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_make_photo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_black"
        android:textColor="@color/white"
        android:text="@string/make_photo"
        android:textAllCaps="false"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/button_select_photo"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_select_photo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_black"
        android:textColor="@color/white"
        android:text="@string/select_in_gallery"
        android:textAllCaps="false"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>