<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar_cancel"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    app:layout_constraintStart_toStartOf="parent"
    android:elevation="1dp"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/tv_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#5F5F5F"
        android:textSize="15sp"
        android:text="@string/cancel"/>

</androidx.appcompat.widget.Toolbar>

    <View
        android:background="#C4C4C4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_cancel"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:text="@string/sign_in"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:elevation="2dp"/>

    <View
        android:layout_width="94dp"
        android:layout_height="2dp"
        android:background="#CF497E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@drawable/edittext_box"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in"
        android:layout_marginTop="57dp"
        android:inputType="textEmailAddress"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email"
        android:textColor="#C4C4C4"
        android:paddingEnd="10dp"
        android:drawableEnd="@drawable/icon_email"
        android:paddingStart="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/et_username">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@drawable/edittext_box"
        android:layout_marginTop="29dp"
        android:inputType="textPassword"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/icon_eye"
        android:paddingEnd="10dp"
        android:hint="@string/password"
        android:paddingStart="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tl_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/forgot_login_or_password"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:onClick="onClickForgotPassword"
        android:clickable="true"
        android:textColor="#C4C4C4"
        android:focusable="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_in"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_corners_black"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_password"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_sign_up"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:gravity="center"
        android:layout_marginTop="19dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:onClick="onClickSingUp"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_sign_in"/>

</androidx.constraintlayout.widget.ConstraintLayout>