<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/webant_logo"
        android:layout_marginTop="184dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_welcome"/>

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/image_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/text_welcome"
        android:background="@drawable/rounded_corners_black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_an_account"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/button_sign_up"
        android:background="@drawable/rounded_corners_white"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/i_already_have_an_account"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>