<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_cancel"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5F5F5F"
            android:textSize="15sp"
            android:text="@string/cancel"/>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:background="#C4C4C4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_cancel"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:elevation="2dp"/>

    <View
        android:layout_width="94dp"
        android:layout_height="2dp"
        android:background="#CF497E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:boxStrokeErrorColor="#E80000"
        app:boxStrokeColor="@color/gray"
        style="@style/MyEditTextOutlined"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:textSize="17sp"
            android:layout_marginTop="57dp"
            android:paddingEnd="10dp"
            android:inputType="textPersonName"
            android:hint="@string/user_name"
            android:textCursorDrawable="@drawable/color_cursor"
            android:drawableEnd="@drawable/icon_person"
            android:paddingStart="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:hintEnabled="false"
        app:errorEnabled="true"
        style="@style/MyEditTextOutlined"
        app:boxStrokeColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/tl_username">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_birthday"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            app:layout_constraintTop_toBottomOf="@id/tl_username"
            android:layout_marginTop="29dp"
            android:textSize="17sp"
            android:inputType="date"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingEnd="10dp"
            android:hint="@string/birthday"
            android:textCursorDrawable="@drawable/color_cursor"
            android:drawableEnd="@drawable/icon_calendar"
            android:paddingStart="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:boxStrokeErrorColor="#E80000"
        app:boxStrokeColor="@color/gray"
        style="@style/MyEditTextOutlined"
        app:layout_constraintTop_toBottomOf="@id/tl_birthday">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="17sp"
            android:inputType="textEmailAddress"
            android:hint="@string/email2"
            android:textCursorDrawable="@drawable/color_cursor"
            android:drawableEnd="@drawable/icon_email"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:boxStrokeErrorColor="#E80000"
        app:boxStrokeColor="@color/gray"
        app:passwordToggleDrawable="@drawable/icon_eye"
        style="@style/MyEditTextOutlined"
        app:layout_constraintTop_toBottomOf="@id/tl_email">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/color_cursor"
            android:drawableEnd="@drawable/icon_eye"
            android:paddingEnd="10dp"
            android:hint="@string/password2"
            android:paddingStart="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:boxStrokeErrorColor="#E80000"
        app:passwordToggleEnabled="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="@color/gray"
        app:passwordToggleDrawable="@drawable/icon_eye"
        style="@style/MyEditTextOutlined"
        app:layout_constraintTop_toBottomOf="@id/tl_password">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/color_cursor"
            android:paddingEnd="10dp"
            android:hint="@string/confirm_password2"
            android:paddingStart="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_up"
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/rounded_corners_black"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_confirm_password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_in"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:gravity="center"
        android:textAllCaps="false"
        android:layout_marginTop="19dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@color/white"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_sign_up"
        />


</androidx.constraintlayout.widget.ConstraintLayout>