<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/add"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/pink"
            android:layout_marginBottom="12dp"
            android:layout_gravity="right"/>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view1"
        android:background="#C4C4C4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="70dp">

    <ImageView
        android:id="@+id/image_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/view2"
        android:background="#C4C4C4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/image_add"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_name"
        app:hintEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/MyEditTextOutlined"
        app:layout_constraintTop_toBottomOf="@id/view2">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_description"
        app:hintEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:hintTextColor="@color/gray"
        style="@style/MyEditTextOutlined"
        app:layout_constraintTop_toBottomOf="@id/tl_name">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_description"
            android:hint="@string/description"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_new"
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:checked="false"
        android:paddingStart="10dp"
        android:text="New"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:background="@drawable/selectors_box"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@id/tl_description"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_popular"
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:checked="false"
        android:textSize="12sp"
        android:text="@string/popular"
        android:textColor="@color/white"
        android:paddingStart="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/selectors_box"
        app:layout_constraintTop_toBottomOf="@id/switch_new"
        app:layout_constraintStart_toStartOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>